# honey-os

./: .gitignore  .gitmodules  Cargo.toml  Makefile.toml  README.md  Trunk.toml  dump.wat  rust-toolchain.toml
.cargo/: config.toml
bootloader/: Cargo.toml
bootloader/src/: lib.rs
crates/honeyos-display/: Cargo.toml
crates/honeyos-display/src/: lib.rs
crates/honeyos-fs/: Cargo.toml
crates/honeyos-fs/src/: error.rs  filetable.rs  fshandler.rs  lib.rs  localfs.rs  ramfs.rs  tests.rs
crates/honeyos-networking/: Cargo.toml
crates/honeyos-networking/src/: error.rs  lib.rs  request.rs
crates/honeyos-process/: Cargo.toml
crates/honeyos-process/src/: api.rs  context.rs  lib.rs  memory.rs  process.rs  requirements.rs  stdout.rs
crates/honeyos-shell/: Cargo.toml
crates/honeyos-shell/src/: lib.rs  stdout.rs
devtools/: dev.py  serve.py
hapi/: Cargo.toml
hapi-proc/: Cargo.toml
hapi-proc/src/: lib.rs
hapi/src/: browser.rs  display.rs  ffi.rs  futures.rs  js_console.rs  lib.rs  mem.rs  network.rs  process.rs  stdout.rs  time.rs
hapi/src/util/: keys.rs  mod.rs  term.rs
kernel/: Cargo.toml  Makefile.toml  index.html
kernel/src/: boot.rs  display.rs  lib.rs  main.rs  process.rs
kernel/src/api/: browser.rs  display.rs  mem.rs  mod.rs  network.rs  process.rs  time.rs
kernel/src/shell/: mod.rs  parse.rs
kernel/src/system/: fs.rs  mod.rs  shell.rs
scripts/: rootfs.py
src/: main.rs
src/shell/: mod.rs  parse.rs
src/system/: shell.rs
test/: helloworld.rs  helloworld.wasm
www/: index.html  style.css
