[package]
name = "bootloader"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow = "1.0.82"
hapi = { git = "https://github.com/HoneyOS-Foundation/Hapi", features = [
    "logger",
] }
log = "0.4.21"
wasm_thread = "0.3.0"
zip = { version = "1.2.3", default-features = false }
