[package]
name = "kernel"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
honeyos-shell = { path = "../crates/honeyos-shell" }
honeyos-fs = { path = "../crates/honeyos-fs" }
honeyos-process = { path = "../crates/honeyos-process" }
honeyos-display = { path = "../crates/honeyos-display" }

console_error_panic_hook = "0.1.7"
console_log = { version = "1.0.0", features = ["color"] }
log = "0.4.21"
wasm-bindgen = "0.2.92"
wasm-bindgen-futures = "0.4.42"
wasm_thread = { version = "0.2.0", features = ["es_modules"] }
web-sys = { version = "0.3.69", features = [
    "console",
    "Document",
    "Element",
    "Event",
    "HtmlElement",
    "HtmlButtonElement",
    "HtmlTextAreaElement",
    "Node",
    "Window",
    "Navigator",
    "Location",
    "Clipboard",
    "KeyboardEvent",
    'Headers',
    "Blob",
    'Request',
    'RequestInit',
    'RequestMode',
    'Response',
    "FileReader",
] }
anyhow = "1.0.82"
uuid = { version = "1.8.0", features = ["js", "v4"] }
