[package]
resolver = "2"
name = "honeyos-fs"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0.197", features = ["derive"] }
serde-wasm-bindgen = "0.4"
serde_json = "1.0.115"
hashbrown = { version = "0.14.3", features = ["serde"] }
uuid = { version = "1.8.0", features = ["v4", "js", "serde"] }
web-sys = { version = "0.3.69", features = [
    "Window",
    "Storage",
    "HtmlInputElement",
    "File",
    "FileReader",
    "FileList",
] }
log = "0.4.21"
web-time = "1.1.0"
