[package]
name = "honeyos-process"
version = "0.1.0"
edition = "2021"

[dependencies]
hashbrown = "0.14.3"
log = "0.4.21"
serde-wasm-bindgen = "0.6.5"
uuid = { version = "1.8.0", features = ["js", "v4"] }
wasm-bindgen = "0.2.92"
wasm-bindgen-futures = "0.4.42"
wasm_thread = { version = "0.2.0", features = ["es_modules"] }
wasmer = { version = "4.2.8", default-features = false, features = [
    "js",
    "js-default",
    "js-sys",
    "js-serializable-module",
    "wasm-bindgen",
] }
web-sys = { version = "0.3.69", features = [
    "console",
    "Document",
    "Element",
    "Event",
    "HtmlElement",
    "HtmlButtonElement",
    "HtmlTextAreaElement",
    "Node",
    "Window",
    "Navigator",
    "Location",
    "Clipboard",
    "KeyboardEvent",
] }
