[package]
name = "honeyos-process"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.82"
arc-swap = "1.7.1"
futures = "0.3.30"
hashbrown = "0.14.3"
log = "0.4.21"
serde-wasm-bindgen = "0.6.5"
tokio = { version = "1.37.0", features = ["rt", "sync"] }
uuid = { version = "1.8.0", features = ["js", "v4"] }
wasm-bindgen = "0.2.92"
wasm-bindgen-futures = "0.4.42"
wasm_thread = { git = "https://github.com/adamgerhant/wasm_thread.git", features = [
    "es_modules",
] }
wasmparser = "0.207.0"
web-sys = { version = "0.3.69", features = [
    "console",
    "Document",
    "Element",
    "Event",
    "HtmlElement",
    "HtmlButtonElement",
    "HtmlTextAreaElement",
    "Node",
    "Window",
    "Navigator",
    "Location",
    "Clipboard",
    "KeyboardEvent",
    'Worker',
] }
