[package]
name = "honeyos-shell"
version = "0.1.0"
edition = "2021"

[dependencies]
web-sys = { version = "0.3.69", features = [
    "console",
    "Document",
    "Element",
    "Event",
    "HtmlElement",
    "HtmlButtonElement",
    "Node",
    "Window",
    "Navigator",
    "Location",
    "Clipboard",
    "KeyboardEvent",
] }
